***** JKCEMU Version 0.9.6 vom 23.12.2016 *****
    * A5105: Emulation des Tastenklicks hinzugefügt
    * BCS3:
        o S/P-BASIC V3.3 auf die neueste Version aktualisiert
        o Tastaturansicht hinzugefügt
        o AutoLoad und AutoInput hinzugefügt
    * Hübler/EvertMC:
        o AutoLoad und AutoInput hinzugefügt
        o Möglichkeit zur Einbindung eines externen Betriebssystem- und
          Zeichengenerator-ROMs hinzugefügt
    * KC85/2..5: Emulation der Tongeneratoren verbessert
    * KC compact: AutoInput hinzugefügt
    * KramerMC:
        o AutoLoad und AutoInput hinzugefügt
        o Möglichkeit zur Einbindung externer ROM-Dateien hinzugefügt
    * LC80: AutoLoad und AutoInput hinzugefügt
      Damit AutoInput vollständig nutzbar ist, können die auf den
      Funktionstasten F1 und F2 liegenden Funktionen nun auch mit einem
      Buchstaben aufgerufen werden.
    * LLC1: AutoLoad und AutoInput hinzugefügt
    * NANOS: EPOS-Diskettenabbilder aktualisert:
        o FileCommander (FC64 und FC80) auf Version 0.9c
        o SETCOLOR auf Version 1.3
    * PC/M: Diskettenabbilder um PC/M-spezifische Systemprogramme erweitert
    * SC2: Emulation der Tonausgabe verbessert
    * LC1: Emulation der Tonausgabe hinzugefügt
    * Audiorecorder: max. Aufnahmedauer auf 120 Minuten erhöht
    * Audio-/Kassettenemulation komplett überarbeitet:
      Es werden nun die drei Teilsysteme
        o Eingang vom Kassettenrecorder,
        o Ausgang zum Kassettenrecorder und
        o Ausgang Lautsprecher/Tongenerator
      separat und voneinander unabhängig emuliert, d.h., sie können auch
      gleichzeitig aktiviert werden.
    * Bildbetrachter:
        o Schaltflächen zum Anzeigen des vorherigen und nächsten Bildes
          hinzufügen
        o Bildbearbeitungsfunktionen hinzugefügt
        o Möglichkeiten zur Konvertierung von Bildern in das Format einiger
          von JKCEMU emulierten Systeme wesentlich erweitert.
        o Unterstützung für IFF/ILBM-Dateien hinzuge